[package]
name = "unknown_lang_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.4", features = ["derive"] }
colored = "2.0.0"
unknown_lang_parser = { path = "../unknown_lang_parser" }
